# astro-tigress

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  README.md  api.html  example_1-synthetic-HI.html  example_2-synthetic-dustpol.html  extract_data_subset.html  genindex.html  index.html  index.md  install.html  install.sh  intro.html  methods.html  mkdocs.yml  module.html  module.md  objects.inv  prepare_tutorial.py  pyproject.toml  read_data_1-MHD.html  read_data_2-chem-CO_lines.html  read_data_2-chem-CO_lines.ipynb  read_data_3-MHD_PI.html  requirements.txt  search.html  searchindex.js  setup.py  sitemap.xml  spherical_projection_example_from_fits.ipynb
_modules/: index.html
_sources/: example_1-synthetic-HI.ipynb  example_2-synthetic-dustpol.ipynb  index.md  intro.md  read_data_2-chem-CO_lines.ipynb  read_data_3-MHD_PI.ipynb
analysis/: example_1-synthetic-HI.ipynb  example_2-synthetic-dustpol.ipynb  example_3-synthetic-RM.ipynb  read_data_1-MHD.ipynb  read_data_2-chem-CO_lines.ipynb  read_data_3-MHD_PI.ipynb  read_data_3-rad.ipynb
astro_tigress/: __init__.py  athena_read.py  const.py  map_circular_beam.py  radmc.py  synthetic_HI.py  synthetic_dustpol.py  tigress_read.py  tigress_utils.py  ytathena.py
docs/: _config.yml  _toc.yml  api.rst  example_2-synthetic-dustpol.ipynb  extract_data_subset.ipynb  index.md  install.md  intro.md  module.md  read_data_1-MHD.ipynb  read_data_2-chem-CO_lines.ipynb  read_data_3-MHD_PI.ipynb  references.bib
install/: index.html  install.md
miscellaneous/: copy_data.ipynb  delete_fields_vtk.py  read_vtk.py  units.py
(+32 files in other folders)
