[tool.poetry]
name = "astro-tigress"
version = "0.1.0"
description = "TIGRESS data release and associate python scripts"
authors = ["Chang-Goo Kim <cgkim@astro.princeton.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.20.0"
yt = "^4.0.4"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
h5py = "^3.7.0"
astropy = "^5.1"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.0"
mkdocstrings-python = "^0.7.0"
mkdocs-material = "^8.3.0"
pytkdocs = {version = "^0.16.1", extras = ["numpy-style"]}
mkdocs-jupyter = "^0.21.0"
jupyterlab = "^3.4.3"
xarray = "^2022.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
